fixed redundant code and fixed other event header
added margin to event heading to prevent them from being hidden behind the navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,9 +10,6 @@ body {
     font-weight: 700;
     color: #222;
     scroll-margin-top: 60px;
-  }
-
-  h1{
     margin-top: 60px;
   }
   
